[tool.poetry]
name = "twitter-backup"
version = "0.1.0"
description = ""
authors = ["leo-guinan <leo@copy.ai>"]
readme = "README.md"
packages = [{include = "twitter_backup"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.5.0"
tweepy = "^4.12.1"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
